2004-07-08  Gareth Owen  <gowen72@yahoo.com>

	* Locations.xml.in: Corrected zone for Washington DC

	Fixes bug #145625

2004-07-06  Gareth Owen <gowen72@yahoo.com>

	* weather.c: (metar_tok_wind): Mapping of wind directions [237..247]

	Fixes bug #145053

	Patch by Frank Solensky <frank@solensky.org>

2004-07-06  Gareth Owen  <gowen72@yahoo.com>

	* gweather-applet.c (size_allocate_cb): added callback
	for changes in panel size.

	Fixes bug #135205

	Patch by Vincent Noel <vnoel@cox.net>

2004-06-26  Gareth Owen  <gowen72@yahoo.com>

	* docs/C/gweather.xml: Updated document to match recent changes.

	Fixes bug #144957

2004-06-26  Dennis Smit  <ds@nerds-incorporated.org>

	* docs/C/gweather.xml: Add brief description of "feels like"

	* gweather-dialog.c: (gweather_dialog_create),
	(gweather_dialog_update): Add fields for apparent temperature

	* gweather.h: Add widget for apparent temperature

	* weather.c: (calc_humidity), (weather_info_get_humidity):
	Calculate humidity as a gdouble instead of int

	* (calc_apparent), (weahter_info_get_apparent): Added

	* (metar_tok_temp), (_weather_info_fill), (weather_info_config_write),
	(weather_info_config_read): Don't save humidity in info structure;
	calculate only as needed for display.

	* weather.h: WeatherHumidity returns gdouble, don't save in "info".
	Add "get_apparent" for wind chill / heat index calcualtions.

	Patch by: Frank Solensky  <frank@solensky.org>

	Fixes bug #131005.

2004-06-26  Dennis Smit  <ds@nerds-incorporated.org>

	* Locations.xml.in: Added VIJP, Jaipur/Sanganer.
	
	Fixes bug #144735.

2004-06-24  Gareth Owen  <gowen72@yahoo.com>

	* Locations.xml.in: Removed some broken locations

2004-06-24  Gareth Owen  <gowen72@yahoo.com>

	* Locations.xml.in: Added Morganton, NC, USA

2004-06-23  Gareth Owen  <gowen72@yahoo.com>

	* Makefile.am: move location translations to a seperate domain.

	Patch by Danilo Segan

2004-06-21  Gareth Owen  <gowen72@yahoo.com>

	* docs/eu/.cvsignore: Quieten CVS 
