@@ -1,3 +1,11 @@
+2004-07-25  Gareth Owen  <gowen72@yahoo.com>
+
+	* gweather-pref.c: Fix compile of systems without _NL_MEASUREMENT_MEASUREMENT
+
+	Fixes bug #148049
+
+	Patch by Joe Marcus Clarke <marcus@freebsd.org>
+
 2004-07-08  Gareth Owen  <gowen72@yahoo.com>
 
 	* Locations.xml.in: Corrected zone for Washington DC
